--- a/renderer/main.css
+++ b/renderer/main.css
@@ -38,7 +38,7 @@ header {
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
 }
 
-#show-modal{
+#show-modal {
   padding: 0 12px 5px;
   margin-right: 10px;
   font-size: 30px;
@@ -68,7 +68,7 @@ main {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.85);
-  display: flex;
+  /*display: flex;*/
   align-items: center;
   align-content: center;
   flex-wrap: wrap;
@@ -103,9 +103,19 @@ main {
   border-bottom: lightgray 2px solid;
   background: #FAFAFA;
   padding: 10px;
+  border-left: 10px solid lightgray;
+  -webkit-user-select: none;
+}
+
+.read-item:hover {
+  background-color: #EEE;
+}
+
+.read-item.selected {
+  border-left-color: dodgerblue;
 }
 
 .read-item img {
-   width: 20%;
+  width: 20%;
   margin-right: 25px;
 }
